# xo

./: .gitignore
backend/: Cargo.toml  xo.db
backend/migrations/: .env  Cargo.toml
backend/migrations/src/: m20220101_000001_create_users_table.rs
backend/src/: error.rs  main.rs  utils.rs
backend/src/api/: actions.rs  handlers.rs  mod.rs  users.rs  ws.rs
backend/src/entities/: user.rs
frontend/: .eslintrc.yml  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/actions/: clientActions.ts  serverActions.ts
frontend/src/components/ActivePlayers/: ActivePlayers.tsx
frontend/src/components/Auth/: Auth.module.css  Auth.tsx
frontend/src/components/Board/: Board.module.css  Board.tsx
frontend/src/components/Body/: Body.module.css  Body.tsx
frontend/src/components/LocalGame/: LocalGame.module.css  LocalGame.tsx
frontend/src/components/Main/: Main.module.css  Main.tsx
frontend/src/components/Modal/: Modal.module.css  Modal.tsx
frontend/src/stores/: ModalStore.ts  WebScoketStore.ts
frontend/src/utils/: request.ts
frontend/src/views/: BoardView.tsx  MainView.tsx
