[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.0", features = ["rand", "password-hash"] }
axum = { version = "0.6.18", features = ["ws", "headers"] }
axum-extra = { version = "0.7.4", features = ["typed-routing"] }
futures = { version = "0.3.28", features = ["futures-executor"] }
futures-util = { version = "0.3.28", features = ["sink", "std"] }
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
rand_core = { version = "0.6.4", features = ["std"] }
sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "runtime-tokio-rustls"]}
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = "1.3.2"
validator = { version = "0.16.0", features = ["derive"] }
